tests/script_errors/string_interpolation_eof/error.txt
Error: 
    1 | let si = "before #{
      |                  ^^ It looks like you forgot to terminate a string interpolation with a closing '}'
      |                     NOTE: Did you mean to write a literal '#{' ? Escape it as '\#{'.